Add /user/edit/USER_ID endpoint to modify user